--- a/src/commands/quality_check.yml
+++ b/src/commands/quality_check.yml
@@ -1,6 +1,12 @@
 description: |
   This command check quality of code.
 
+parameters:
+  quality_check:
+    description: This command check quality of code.
+    type: boolean
+    default: false
+
 steps:
   - checkout
   - node/install:
