--- a/src/jobs/run.yml
+++ b/src/jobs/run.yml
@@ -10,4 +10,4 @@ parameters:
 
 steps:
   - quality:
-      quality-check: << parameters.quality_check >>
+      quality_check: << parameters.quality_check >>
