feat: add build application

--- a/src/commands/build_application.yml
+++ b/src/commands/build_application.yml
@@ -2,13 +2,13 @@ description: |
   This command build application.
 
 parameters:
-  image-name:
+  imane_name:
     type: string
     default: ""
-  image-tag:
+  imane_tag:
     type: string
     default: ${CIRCLE_SHA1}
-  ecr-url:
+  ecr_url:
     type: string
     default: 958549588201.dkr.ecr.us-east-1.amazonaws.com
 
@@ -31,13 +31,13 @@ steps:
   - run:
       name: Build Docker image
       command: |
-        echo "Building docker image with identification\n: << pipeline.parameters.image-name >>:<< pipeline.parameters.image-tag >>"
-        docker build -t << pipeline.parameters.image-name >>:<< pipeline.parameters.image-tag >> .
+        echo "Building docker image with identification\n: << pipeline.parameters.imane_name >>:<< pipeline.parameters.imane_tag >>"
+        docker build -t << pipeline.parameters.imane_name >>:<< pipeline.parameters.imane_tag >> .
   - aws-cli/setup
   - run:
       name: Upload image to ECR
       command: |
         aws ecr get-login-password --region "${AWS_DEFAULT_REGION}" | \
-          docker login --username AWS --password-stdin "<< pipeline.parameters.ecr-url >>/<< pipeline.parameters.image-name >>"
-        docker tag << pipeline.parameters.image-name >>:<< pipeline.parameters.image-tag >> << pipeline.parameters.ecr-url >>/<< pipeline.parameters.image-name >>:<< pipeline.parameters.image-tag >> \
-          && docker push << pipeline.parameters.ecr-url >>/<< pipeline.parameters.image-name >>:<< pipeline.parameters.image-tag >>
+          docker login --username AWS --password-stdin "<< pipeline.parameters.ecr_url >>/<< pipeline.parameters.imane_name >>"
+        docker tag << pipeline.parameters.imane_name >>:<< pipeline.parameters.imane_tag >> << pipeline.parameters.ecr_url >>/<< pipeline.parameters.imane_name >>:<< pipeline.parameters.imane_tag >> \
+          && docker push << pipeline.parameters.ecr_url >>/<< pipeline.parameters.imane_name >>:<< pipeline.parameters.imane_tag >>
