fix: refactor build application add script to build image

--- a/src/commands/build_application.yml
+++ b/src/commands/build_application.yml
@@ -32,7 +32,7 @@ steps:
       environment:
         BUILD_IMAGE_IMAGE_NAME: << pipeline.parameters.image_name >>
         BUILD_IMAGE_IMAGE_TAG: << pipeline.parameters.image_tag >>
-      command: << include(script/build_image.sh) >>
+      command: << include(scripts/build_image.sh) >>
   - aws-cli/setup
   - run:
       name: Upload image to ECR
@@ -40,4 +40,4 @@ steps:
         BUILD_IMAGE_ECR_URL: << pipeline.parameters.ecr_url >>
         BUILD_IMAGE_IMAGE_NAME: << pipeline.parameters.image_name >>
         BUILD_IMAGE_IMAGE_TAG: << pipeline.parameters.image_tag >>
-      command: << include(script/upload_image.sh) >>
+      command: << include(scripts/upload_image.sh) >>
