--- a/src/commands/build_application.yml
+++ b/src/commands/build_application.yml
@@ -5,7 +5,7 @@ parameters:
   image_name:
     type: string
     default: ""
-  imane_tag:
+  image_tag:
     type: string
     default: ${CIRCLE_SHA1}
   ecr_url:
