--- a/src/jobs/run.yml
+++ b/src/jobs/run.yml
@@ -6,7 +6,7 @@ parameters:
   image_name:
     type: string
     default: ""
-  imane_tag:
+  image_tag:
     type: string
     default: ${CIRCLE_SHA1}
   ecr_url:
@@ -17,5 +17,5 @@ steps:
   - quality
   - build_application:
       image_name: darwin-seguros/<< pipeline.parameters.image_name >>
-      imane_tag: << pipeline.parameters.imane_tag >>
+      image_tag: << pipeline.parameters.image_tag >>
       ecr_url: << pipeline.parameters.ecr_url >>
