--- a/src/commands/generate_apigw_file.yml
+++ b/src/commands/generate_apigw_file.yml
@@ -34,5 +34,5 @@ steps:
   - run:
       name: Run update api gateway
       environment:
-        GENERATE_APIGW_FILE_IMAGE_NAME: << parameters.image_name >>
+        UPDATE_APIGW_IMAGE_NAME: << parameters.image_name >>
       command: << include(scripts/update_apigw.sh) >>
