--- a/src/commands/setup_default_branchs.yml
+++ b/src/commands/setup_default_branchs.yml
@@ -5,6 +5,9 @@ parameters:
   oidc_token:
     type: string
     default: ""
+  project:
+    type: string
+    default: ""
 
 steps:
   - checkout
@@ -12,4 +15,5 @@ steps:
       name: Setting defaults branchs
       environment:
         SETUP_DEFAULT_BRANCHS_OIDC_TOKEN: << parameters.oidc_token >>
+        SETUP_PROJECT: << pipeline.project >>
       command: << include(scripts/setup_default_branchs.sh) >>
