--- a/src/commands/update_service.yml
+++ b/src/commands/update_service.yml
@@ -20,6 +20,7 @@ parameters:
 
 steps:
   - checkout
+  - aws-cli/setup
   - setup_remote_docker:
       docker_layer_caching: false
   - node/install:
