--- a/src/commands/generate_apigw_file.yml
+++ b/src/commands/generate_apigw_file.yml
@@ -14,6 +14,10 @@ steps:
   - node/install:
       install-yarn: false
       node-version: '18.16'
+  - npm-config/set-registry:
+      registry-prurl: //npm.pkg.github.com
+      scope: '@darwin-seguros'
+      auth-token: ${NPM_TOKEN}
   - node/install-packages:
       pkg-manager: npm
   - aws-cli/setup
