--- a/src/commands/update_service.yml
+++ b/src/commands/update_service.yml
@@ -23,6 +23,10 @@ steps:
   - aws-cli/setup
   - setup_remote_docker:
       docker_layer_caching: false
+  - npm-config/set-registry:
+      registry-prurl: //npm.pkg.github.com
+      scope: '@darwin-seguros'
+      auth-token: ${NPM_TOKEN}
   - node/install:
       install-yarn: false
       node-version: '18.16'
