--- a/src/commands/update_service.yml
+++ b/src/commands/update_service.yml
@@ -29,6 +29,10 @@ steps:
       registry-prurl: //npm.pkg.github.com
       scope: '@darwin-seguros'
       auth-token: ${NPM_TOKEN}
+  - run:
+      name: Copy .npmrc to workspace
+      command: |
+          cp ~/.npmrc .npmrc
   - aws-cli/setup
   - run:
       name: Generate configmap
