--- a/src/jobs/run.yml
+++ b/src/jobs/run.yml
@@ -39,9 +39,21 @@ parameters:
   project:
     type: string
     default: ""
+  sonar_url:
+    type: string
+    default: "https://sonar.dev.cloud.darwinseguros.com"
+  sonar_key:
+    type: string
+    default: ""
+  sonar_token:
+    type: string
+    default: ""
 
 steps:
-  - quality
+  - quality:
+      sonar_url: << parameters.sonar_url >>
+      sonar_key: << parameters.sonar_key >>
+      sonar_token: << parameters.sonar_token >>
   - build_application:
       image_name: << parameters.image_name >>
       image_tag: << parameters.image_tag >>
