feat: add npm token param

--- a/src/commands/build_application.yml
+++ b/src/commands/build_application.yml
@@ -2,6 +2,9 @@ description: |
   This command build application.
 
 parameters:
+  npm_token:
+    type: string
+    default: ""
   image_name:
     type: string
     default: ""
@@ -26,7 +29,7 @@ steps:
   - npm-config/set-registry:
       registry-prurl: //npm.pkg.github.com
       scope: '@darwin-seguros'
-      auth-token: ${NPM_TOKEN}
+      auth-token: << parameters.npm_token >>
   - run:
       name: Build Docker image
       environment:
