--- a/src/commands/quality.yml
+++ b/src/commands/quality.yml
@@ -2,6 +2,9 @@ description: |
   This command check quality of code.
 
 parameters:
+  npm_token:
+    type: string
+    default: ""
   sonar_url:
     type: string
     default: "https://sonar.dev.cloud.darwinseguros.com"
@@ -20,7 +23,7 @@ steps:
   - npm-config/set-registry:
       registry-prurl: //npm.pkg.github.com
       scope: '@darwin-seguros'
-      auth-token: ${NPM_TOKEN}
+      auth-token: << parameters.npm_token >>
   - node/install-packages:
       pkg-manager: npm
   - run:
