--- a/src/commands/quality.yml
+++ b/src/commands/quality.yml
@@ -24,6 +24,10 @@ steps:
       registry-prurl: //npm.pkg.github.com
       scope: '@darwin-seguros'
       auth-token: << parameters.npm_token >>
+  - run:
+    name: Show NPMRC
+    command: |
+      cat ~/.npmrc
   - node/install-packages:
       pkg-manager: npm
   - run:
