revert: revert configuration

--- a/src/commands/build_application.yml
+++ b/src/commands/build_application.yml
@@ -2,9 +2,6 @@ description: |
   This command build application.
 
 parameters:
-  npm_token:
-    type: string
-    default: ""
   image_name:
     type: string
     default: ""
@@ -29,7 +26,7 @@ steps:
   - npm-config/set-registry:
       registry-prurl: //npm.pkg.github.com
       scope: '@darwin-seguros'
-      auth-token: << parameters.npm_token >>
+      auth-token: ${NPM_TOKEN}
   - run:
       name: Build Docker image
       environment:
