--- a/src/commands/update_service.yml
+++ b/src/commands/update_service.yml
@@ -23,9 +23,6 @@ parameters:
   service:
     type: string
     default: ""
-  npm_token:
-    type: string
-    default: ""
 
 steps:
   - checkout
@@ -37,7 +34,7 @@ steps:
   - npm-config/set-registry:
       registry-prurl: //npm.pkg.github.com
       scope: '@darwin-seguros'
-      auth-token: << parameters.npm_token >>
+      auth-token: ${NPM_TOKEN}
   - run:
       name: Copy .npmrc to workspace
       command: |
