fix: update update ecs command

--- a/src/commands/generate_apigw_file.yml
+++ b/src/commands/generate_apigw_file.yml
@@ -2,9 +2,6 @@ description: |
   This command generate apigw file.
 
 parameters:
-  workspace:
-    type: string
-    default: ~/terraform
   image_name:
     type: string
     default: ""
@@ -34,7 +31,7 @@ steps:
       path: ./infra/terraform/swagger-spec.json
       destination: swagger-spec-result.json
   - persist_to_workspace:
-      root: ~/<< parameters.workspace >>
+      root: ~/terraform-search-api
       paths:
         - ./infra/terraform/swagger-spec.json
         - swagger-spec.json
